public interface ItemCardapio {
    double getPreco();
}